c/examples/writing-a-c-compiler-tests/tests/chapter_9/invalid_parse/unclosed_paren_decl.c
int foo(int a, int b {
    return 0;
}

int main(void) {
    return 0;
}